Fire the `backgroundfetchabort` event for aborted fetches

When the status of a completed fetch is ABORTED, which can be caused by
either the user (by using the notification) or the developer (by calling
abort() on the registration), fire the aforementioned event.

BUG=706831

Review-Url: https://codereview.chromium.org/2824223002
Cr-Commit-Position: refs/heads/master@{#465263}

Former-commit-id: 438975fc49827c2b419b0c173570c4604c74c59b